Add create game character functional in Server, java 16 enabled