@@ -13,8 +13,9 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>server</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>jar</packaging>
     <properties>
-        <java.version>11</java.version>
+        <java.version>16</java.version>
         <jooq.version>3.15.2</jooq.version>
         <db.driver>org.postgresql.Driver</db.driver>
         <db.url>jdbc:postgresql://localhost:5432/reactive_test</db.url>
@@ -213,8 +214,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>16</source>
+                    <target>16</target>
 
                     <annotationProcessorPaths>
                         <path>
@@ -233,6 +234,7 @@
                             <version>1.4.2.Final</version>
                         </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
